--- a/styles/stylish.scss
+++ b/styles/stylish.scss
@@ -251,6 +251,7 @@ section {
 	      -ms-transform: translate(-50%, -50%);
 	          transform: translate(-50%, -50%);
 	width: 100%;
+	z-index: 1;
 }
 
 .half {
