--- a/styles/stylish.scss
+++ b/styles/stylish.scss
@@ -83,3 +83,17 @@ main {
 		width: calc(100% - 205px);
 	}
 }
+
+h1,h2,h3 {
+	font: {
+		weight: bold;
+	}
+}
+
+a {
+	color: yellowgreen;
+}
+
+em {
+	font-style: italic;
+}
