update colors, functionality

--- a/rsnake.css
+++ b/rsnake.css
@@ -1,13 +1,13 @@
 #gameboard {
-  border: 1px solid #fff;
-  background: #000;
+  border: 1px solid #1abc9c;
+  background: #2c2c2c;
   height: 310px;
   position: relative;
   width: 310px;
 }
 
 #gameboard > span {
-  color: #fff;
+  color: #1abc9c;
   position: absolute;
     left: 0;
   top: 150px;
@@ -16,8 +16,8 @@
 }
 
 #snake li {
-  background: #fff;
-  border: 1px solid gray;
+  background: #1abc9c;
+  border: 1px solid #2c2c2c;
   box-sizing: border-box;
   display: block;
   height: 10px;
@@ -26,8 +26,8 @@
 }
 
 .apple {
-  background: #f00;
-  border: 1px solid #c00;
+  background: transparent;
+  border: 1px solid #1abc9c;
   box-sizing: border-box;
   display: block;
   height: 10px;
