--- a/stylish.css
+++ b/stylish.css
@@ -1,1 +1,117 @@
-a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}html{cursor:text;height:100%}body,input{background:#000;border:none;color:#fff;font-family:Courier,'Courier New',sans-serif;font-size:14px}body:focus,input:focus{outline:0}main{padding:15px}#cmd-input span{display:block;float:left;height:16px;line-height:16px;width:205px}#cmd-input input{box-sizing:border-box;display:block;float:left;line-height:15px;width:calc(100% - 205px)}h1,h2,h3{font-weight:700}a{color:#9acd32}em{font-style:italic}
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+
+ol, ul {
+	list-style: none;
+}
+
+blockquote, q {
+	quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* */
+
+html {
+	cursor: text;
+	height: 100%;
+}
+
+body {
+	align-items: center;
+	background: #eee;
+	border: none;
+	color: #1abc9c;
+	display: flex;
+	font-family: 'Courier', 'Courier New', sans-serif;
+	font-size: 16px;
+	height: 100%;
+	justify-content: center;
+	line-height: 1;
+}
+
+body:focus, textarea:focus {
+    outline: none;
+}
+
+main {
+	background: #2c2c2c;
+	box-shadow: 1px 1px 24px #2c2c2c;
+	height: 80vh;
+	max-width: 900px;
+	min-width: 320px;
+	overflow-x: hidden;
+	overflow-y: scroll;
+	padding: 15px;
+	width: 80%;
+}
+
+h1,h2,h3 {
+	font-weight: bold;
+}
+
+a {
+	color: yellowgreen;
+}
+
+em {
+	font-style: italic;
+}
+
+#cmd-input {
+	display: flex;
+}
+
+input {
+	background: #2c2c2c;
+	border: none;
+	color: #1abc9c;
+	font-family: 'Courier', 'Courier New', sans-serif;
+	font-size: 16px;
+	margin-top: -2px;
+	padding-left: 4px;
+	width: 100%;
+}
+
+@media only screen and (max-width: 600px) {
+  #cmd-input {
+	  flex-direction: column;
+  }
+
+  input {
+	  padding-left: 0;
+  }
+}
