add new information and secret terminal

--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,31 @@ nav {
   align-items: center;
 }
 
+/*
+ * Terminal
+ */
+
+.terminal-container {
+  align-items: center;
+  background: rgba(0,0,0,0.7);
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  position: fixed;
+  width: 100%;
+  z-index: 9999;
+}
+
+.terminal-container input {
+  height: 44px;
+  padding: 0 13px; 
+}
+
+.terminal-container button {
+  border: none;
+  height: 44px;
+}
+
 /* 
  * Links 
  */
